@@ -1,3 +1,8 @@
+2004-04-03  Miles Bader  <miles@gnu.org>
+
+	* eval.c (Feval): If a variable isn't bound lexically, fall back
+	to looking it up dynamically even if it isn't declared special.
+
 2002-08-26  Miles Bader  <miles@gnu.org>
 
 	* bytecode.c (Fbyte_code): Fsub1 can GC, so protect it.
